--- a/src/app/room/gptchat-room/gptchat-room.component.scss
+++ b/src/app/room/gptchat-room/gptchat-room.component.scss
@@ -18,7 +18,7 @@
     align-items: center;
 
     .options {
-      width: min(30%, 300px);
+      width: min(60%, 300px);
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -44,10 +44,9 @@
 }
 
 .history-container {
-  width: 100%;
   height: 100%;
+  width: min(60%, 300px);
   overflow-y: scroll;
-  width: min(30%, 300px);
   border-radius: 0;
 
   .group {
@@ -85,6 +84,16 @@
       background-color: var(--md-sys-color-surface3);
       border-radius: 100%;
       z-index: -1;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .layout-container {
+    .header {
+      .options {
+        width: auto;
+      }
     }
   }
 }
